--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="icon" href="Img/me.png">
+    <link rel="icon" href="img/me.png">
     <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Patrick Hand SC' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
@@ -34,18 +34,18 @@
         Full Stack Developer<br>
         And Web Designer</b>
     </h1>
-    <img draggable="false" src="Img/circle.png">
+    <img draggable="false" src="img/circle.png">
     <a href="#page3"><button>My Past Projects</button></a>
 </section>
 <section id="page2">
     <div id="bg">
         <h1>My Profile</h1>
-        <img draggable="false" id="p2i" src="Img/me.png">
+        <img draggable="false" id="p2i" src="img/me.png">
         <div id="p2p1"><p>Hi, my name is Raditya Putra Hidayat, I’m a student from Bina Informatika Vocational Highschool and study to becomes a full stack developer, im also good at designing website.</p></div>
         <div id="sosmed">
-            <a href="https://github.com/Pefiye"><img draggable="false" src="Img/Github.png"></a>
-            <a href="https://www.instagram.com/raditp_53/"><img draggable="false" src="Img/Instragam.png"></a>
-            <a href="https://www.linkedin.com/in/raditya-putra-hidayat-7a217331b/"><img draggable="false" src="Img/LinkedIn.png"></a>
+            <a href="https://github.com/Pefiye"><img draggable="false" src="img/Github.png"></a>
+            <a href="https://www.instagram.com/raditp_53/"><img draggable="false" src="img/Instragam.png"></a>
+            <a href="https://www.linkedin.com/in/raditya-putra-hidayat-7a217331b/"><img draggable="false" src="img/LinkedIn.png"></a>
         </div>
         <p id="p2p2">Thank You</p>
     </div>
@@ -53,9 +53,9 @@
 <section id="page3">
 <h1>My Projects</h1>
 <div id="projects">
-        <a href="index.html"><img draggable="false" src="Img/placeholder.png"></a>
-        <a href="index.html"><img draggable="false" src="Img/placeholder.png"></a>
-        <a href="index.html"><img draggable="false" src="Img/placeholder.png"></a><br>
+        <a href="index.html"><img draggable="false" src="img/placeholder.png"></a>
+        <a href="index.html"><img draggable="false" src="img/placeholder.png"></a>
+        <a href="index.html"><img draggable="false" src="img/placeholder.png"></a><br>
 <button id="point">Show More</button>
 </div>
 
