--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <div id="projects">
         <a href="https://pefiye.github.io/QTE/"><img draggable="false" src="Img/Projects/Project1.png"></a>
         <a href="https://pefiye.github.io/LeBronze/"><img draggable="false" src="Img/Projects/Project2.png"></a>
-        <a href="index.html"><img draggable="false" src="Img/placeholder.png"></a><br>
+        <a href="https://pefiye.github.io/SimpleStore/"><img draggable="false" src="Img/Projects/Project3.png"></a><br>
 <a href="project.html"><button id="point">Show More</button></a>
 </div>
 
